--- a/quora-clone/package.json
+++ b/quora-clone/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.14.0",
     "react-scripts": "5.0.1",
