--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "firebase": "^9.8.3"
+    "firebase": "^9.8.3",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^5.0.0"
   }
 }
