--- a/quora-clone/package.json
+++ b/quora-clone/package.json
@@ -15,6 +15,8 @@
     "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-refresh": "^0.14.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
